--- a/lab1/app/src/main/res/layout/activity_main.xml
+++ b/lab1/app/src/main/res/layout/activity_main.xml
@@ -20,4 +20,21 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         tools:layout="@layout/fragment_output" />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="horizontal"
+        android:gravity="bottom">
+
+        <Button
+            android:id="@+id/open_Storage"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_marginHorizontal="20sp"
+            android:layout_marginBottom="50sp"
+            android:layout_weight="1"
+            android:text="@string/openStorage" />
+    </LinearLayout>
 </LinearLayout>
