--- a/lab1/app/src/main/res/values/colors.xml
+++ b/lab1/app/src/main/res/values/colors.xml
@@ -8,6 +8,7 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="background">#F2F3F4</color>
+    <color name="background_second">#98F3F1</color>
     <color name="text">#000033</color>
     <color name="text_background">#808080</color>
     <color name="radio_group">#FFFFFF</color>
