--- a/lab1/app/src/main/res/layout/fragment_input.xml
+++ b/lab1/app/src/main/res/layout/fragment_input.xml
@@ -75,7 +75,9 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:layout_marginHorizontal="20sp"
-                android:text="@string/ok" />
+                android:text="@string/ok"
+                android:backgroundTint="@color/buttons_color"
+                android:textColor="@color/buttons_text_color"/>
 
             <Button
                 android:id="@+id/button_cancel"
@@ -83,7 +85,9 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:layout_marginHorizontal="20sp"
-                android:text="@string/cancel" />
+                android:text="@string/cancel"
+                android:backgroundTint="@color/buttons_color"
+                android:textColor="@color/buttons_text_color"/>
         </LinearLayout>
     </LinearLayout>
 
