--- a/lab1/app/src/main/res/layout/fragment_internal_video.xml
+++ b/lab1/app/src/main/res/layout/fragment_internal_video.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".internal_videoFragment"
+    tools:context=".InternalVideoFragment"
     android:background="@color/background">
 
     <LinearLayout
