--- a/lab1/app/src/main/res/values/colors.xml
+++ b/lab1/app/src/main/res/values/colors.xml
@@ -15,5 +15,5 @@
     <color name="radio_group">#FFFFFF</color>
     <color name="buttons_color">#0006b1</color>
     <color name="buttons_text_color">#FFFFFF</color>
-
+    <color name="tab_selected_color">#0021f3</color>
 </resources>
