lab3: renamed class files

--- a/lab3/app/src/main/res/layout/activity_main.xml
+++ b/lab3/app/src/main/res/layout/activity_main.xml
@@ -9,14 +9,14 @@
 
     <androidx.fragment.app.FragmentContainerView
         android:id="@+id/fragmentContainerView"
-        android:name="com.android.lab1.inputFragment"
+        android:name="com.android.lab3.InputFragment"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         tools:layout="@layout/fragment_input" />
 
     <androidx.fragment.app.FragmentContainerView
         android:id="@+id/fragmentContainerView2"
-        android:name="com.android.lab1.outputFragment"
+        android:name="com.android.lab3.OutputFragment"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         tools:layout="@layout/fragment_output" />
