--- a/lab2/app/src/main/res/layout/fragment_output.xml
+++ b/lab2/app/src/main/res/layout/fragment_output.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".outputFragment">
+    tools:context=".OutputFragment">
 
     <TextView
         android:id="@+id/result"
